CSS fix for ".item-header .wrap"
hide magic login by Configure::read()
check browserOk with Y.UA
add '.empty-photo-gallery-message' to AIR desktop Uploader

--- a/BAKED/app/webroot/css/manoj-css/style.1.css
+++ b/BAKED/app/webroot/css/manoj-css/style.1.css
@@ -119,9 +119,8 @@ div.messages > div.message {
 
 /* header */
 header {
-	xoverflow: hidden;
-	background: #000;
-	height: 40px;
+	overflow: hidden;
+	height: 44px;
 }
 header li {
 	line-height: 40px !important;
@@ -1444,18 +1443,19 @@ ul.circle-thumb li.selected {
 }
 
 /* Circles home page */
-section.item-header > div.wrap {
+section.item-header  {
 	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(197,232,250)),color-stop(1, rgb(232,246,253))	);
 	background-image: -moz-linear-gradient(center bottom,rgb(197,232,250) 0%,rgb(232,246,253) 100%);
 	background: #FFFFC3;
-	xborder: 1px solid #8fb9d0;
 	-webkit-border-radius: 10px 10px 0 0;
 	-moz-border-radius: 10px 10px 0 0;
 	box-shadow: 0 0 5px #888888;
 	x-webkit-box-shadow: 0px 0px 7px #fff inset;
 	x-moz-box-shadow: 0px 0px 7px #fff inset;
-	padding: 4px;	
-	clear: both;
+	overflow: hidden;
+}
+section.item-header  .wrap {
+	padding: 4px 0;	
 	overflow: hidden;
 }
 section.item-header ul {
